Projekt fertig ohne Slider

--- a/src/components/header-sub-page-DieHerkunft.hbs
+++ b/src/components/header-sub-page-DieHerkunft.hbs
@@ -21,15 +21,15 @@
             <a href="../sub-page/Shop.html" class="Link_top-nav">
               <span>Shop</span>
             </a>
-           <li class="Item_top-nav" id="Cart">
-            <a href="#" class="Link_top-nav">
-              <img
-                src="../images/Shop Icon White.svg"
-                alt="Cart"
-                class="top-nav__icon"
-              />
-            </a>
-          </li>
+            <li class="Item_top-nav" id="Cart">
+              <a href="#" class="Link_top-nav">
+                <img
+                  src="../images/Shop Icon White.svg"
+                  alt="Cart"
+                  class="top-nav__icon"
+                />
+              </a>
+            </li>
           </li>
         </ul>
       </nav>
@@ -39,7 +39,9 @@
     <nav class="Menu_mobile">
 
       <div class="Logo_top-nav_mobile">
-        <img src="../images/Logo.svg" alt="Logo" id="logoImg" />
+        <a href="../index.html">
+          <img src="../images/Logo.svg" alt="Logo" id="logoImg" />
+        </a>
       </div>
 
       <div class="Menu_toggle" onclick="toggleMenu()">
@@ -72,7 +74,7 @@
       </div>
     </nav>
   </div>
-<div id="overlay" class="overlay">
+  <div id="overlay" class="overlay">
     <div class="cart-content">
       <h3 class="Titel_Warenkorb">Warenkorb</h3>
       <div class="cart-summary">
@@ -103,5 +105,5 @@
       </div>
     </div>
   </div>
-  
+
 </header>
