--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -38,7 +38,9 @@
     <nav class="Menu_mobile">
 
       <div class="Logo_top-nav_mobile">
-        <img src="../images/Logo.svg" alt="Logo" id="logoImg" />
+        <a href="../index.html">
+          <img src="../images/Logo.svg" alt="Logo" id="logoImg" />
+        </a>
       </div>
 
       <div class="Menu_toggle" onclick="toggleMenu()">
@@ -118,5 +120,4 @@
     </div>
   </div>
 
-  
 </header>
