--- a/src/css/components/mainpage-boxes.css
+++ b/src/css/components/mainpage-boxes.css
@@ -27,6 +27,9 @@
 
 .Titel_Bio-und-Fair {
   margin: 0 0 5% 0;
+  @media (max-width: 768px) {
+    margin: 0;
+  }
 }
 
 .Textbox_right {
@@ -64,6 +67,9 @@
   width: 25%;
   float: right;
   position: relative;
+  @media (max-width: 768px) {
+    width: 30%;
+  }
 }
 
 .Imagebox_left {
@@ -145,8 +151,8 @@
 }
 
 .Icons_Icon-line {
-  scale: 0.5;
-  padding: 2%;
+  scale: 0.4;
+  margin-right: -20px;
 }
 
 @media (max-width: 768px) {
@@ -154,6 +160,11 @@
     scale: 0.4;
     padding: 0;
   }
+}
+.Costa_Rica__Icon-line {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
 }
 
 .Flexbox_Coffee-bags {
@@ -291,8 +302,8 @@
 }
 
 .Logo_Footer {
-  scale: 0.5;
-  transform: translateX(-60px);
+  width: 69.95px;
+  height: 70px;
 }
 
 .Flexbox_Infos-Footer {
@@ -368,7 +379,8 @@
   flex-direction: column;
   align-items: flex-start;
   text-decoration: none;
-  margin: 0% 10% 0% 0%;
+  margin-right: 35%;
+  margin-left: 35%;
   flex: 1;
 }
 
@@ -388,7 +400,6 @@
   flex-direction: column;
   align-items: flex-start;
   text-decoration: none;
-  margin: 0% 10% 0% 0%;
   flex: 1;
 }
 
