--- a/src/css/components/subpage-boxes_DieHerkunft.css
+++ b/src/css/components/subpage-boxes_DieHerkunft.css
@@ -26,8 +26,9 @@
   display: flex;
   flex-direction: row;
   padding: 5%;
-  height: 90vh;@media (max-width: 768px){
-   flex-wrap:wrap;
+  height: 90vh;
+  @media (max-width: 768px) {
+    flex-wrap: wrap;
   }
 }
 
@@ -35,9 +36,9 @@
   width: 40%;
   padding: 0% 10% 5% 0%;
   top: 0px;
-  @media (max-width: 768px){
-    flex-basis:100%;
-    width:100%;
+  @media (max-width: 768px) {
+    flex-basis: 100%;
+    width: 100%;
     padding: 0;
   }
 }
@@ -51,9 +52,9 @@
   display: flex;
   justify-content: flex-end;
   transform: translateY(50px);
-  @media (max-width: 768px){
-    flex-basis:100%;
-    width:100%;
+  @media (max-width: 768px) {
+    flex-basis: 100%;
+    width: 100%;
     padding: 0;
   }
 }
@@ -74,9 +75,9 @@
   padding: 10% 5% 0 5%;
   height: 100vh;
   margin: 0 0 10% 0;
-  @media (max-width: 768px){
-    flex-wrap:wrap;
-    height:auto;
+  @media (max-width: 768px) {
+    flex-wrap: wrap;
+    height: auto;
   }
 }
 
@@ -87,15 +88,15 @@
   display: flex;
   justify-content: center;
   padding: 5% 0 0 0;
-  @media (max-width: 768px){
-    order:2;
+  @media (max-width: 768px) {
+    order: 2;
   }
 }
 
 .Textbox_right-DieHerkunft {
   width: 40%;
-  @media (max-width: 768px){
-    width:100%;
+  @media (max-width: 768px) {
+    width: 100%;
   }
 }
 
